--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "jimp": "^0.16.2",
     "moment": "^2.29.4",
     "needle": "^3.1.0",
+    "request": "^2.88.2",
     "twitter-api-v2": "^1.12.7"
   }
 }
