--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "jimp": "^0.16.2",
     "moment": "^2.29.4",
+    "mongoose": "^6.6.1",
     "needle": "^3.1.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "request": "^2.88.2",
     "twitter-api-v2": "^1.12.7"
   }
